# tetris-pygame

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/: colours.py  main.py  tetris_blocks.py  tetris_board.py
