[tool.poetry]
name = "tetris-pygame"
version = "0.1.0"
description = ""
authors = ["Marcel Nogueira d'Eurydice <mrcl@sourcecrafting.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "2.3.0"
ipython = "^7.28.0"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
